# nrf-blinky

./: CMakeLists.txt  README.org
CMake/: toolchain_gcc.cmake
include/: nrf_drv_config.h
linker/: s110_nrf51.ld
src/: main.c
